--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/SistemaVentas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\AbsoluteLayout.jar
+file.reference.jcalendar-1.4.jar=..\\..\\..\\Drivers\\lib\\jcalendar-1.4.jar
+file.reference.mariadb-java-client-3.0.11.jar=..\\..\\..\\Drivers\\mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mariadb-java-client-3.0.11.jar}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
