--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 compile.on.save=true
-file.reference.AbsoluteLayout.jar=D:\\Programas\\Programaci\u00f3n\\AbsoluteLayout-RELEASE190.jar
-file.reference.jcalendar-1.4.jar=D:\\Programas\\Programaci\u00f3n\\Base de Datos\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.mariadb-java-client-3.0.11.jar=D:\\Programas\\Programaci\u00f3n\\Base de Datos\\mariadb-java-client-3.0.11.jar
+file.reference.AbsoluteLayout.jar=C:\\Users\\Sergio\\Documents\\GitHub\\Equipo3-UniversidadUlp-SistemaVentas\\Drivers\\AbsoluteLayout.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Sergio\\Documents\\GitHub\\Equipo3-UniversidadUlp-SistemaVentas\\Drivers\\jcalendar-1.4.jar
+file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Sergio\\Documents\\GitHub\\Equipo3-UniversidadUlp-SistemaVentas\\Drivers\\mariadb-java-client-3.0.11.jar
 user.properties.file=C:\\Users\\gonzaloNicolas\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
